chore: Update index.html

--- a/Netflix-Clone-main/index.html
+++ b/Netflix-Clone-main/index.html
@@ -99,6 +99,7 @@
                 <li><a href="#">Netflix Originals</a></li>
             </ul>
         </div>
+        <b>Created By Nikhil:)</b>
     </footer>
 </body>
 </html>
